# Orographer

./: .gitignore  README.md  pyproject.toml
docs/: user_guide.md
orographer/: __init__.py  __main__.py  bam_parser.py  deploy.py  gtf_parser.py  orographer.py  utils.py  vcf_parser.py
orographer/plot_bokeh/: __init__.py  callbacks.py  data.py  figures.py  plot_bokeh.py  utils.py
orographer/plot_bokeh/static/js/: arrow_reset_callback.js  arrow_tap_callback.js  arrow_tap_multi_region_callback.js  coord_go_callback.js  embed_replace.js  exon_click_callback.js  hide_1bp_callback.js  hide_alignment_numbers_callback.js  modal.js  number_click_callback.js  range_reset_callback.js  shared_reset_callback.js  variant_lod_callback.js  vcf_variant_click_callback.js  view_callback.js  y_scroll_callback.js  zoom_buttons_callback.js
tests/: conftest.py  unit_test_coverage_gaps.md  unit_tests.md
tests/data/expected_outputs/paraviewer/HG002.paraphase.small/cfc1/: chr2_130592001_130605000_bokeh.html
tests/data/expected_outputs/paraviewer/HG002.paraphase.small/f8/: chrX_155376008_155387000_bokeh.html
tests/data/expected_outputs/paraviewer/HG002.paraphase.small/hba/: chr16_171801_175500_bokeh.html
tests/data/expected_outputs/paraviewer/HG002.paraphase.small/ikbkg/: chrX_154547611_154572000_bokeh.html
tests/data/expected_outputs/paraviewer/HG002.paraphase.small/ncf1/: chr7_74760001_74820000_bokeh.html
tests/data/expected_outputs/paraviewer/HG002.paraphase.small/neb/: chr2_151578751_151588780_bokeh.html
tests/data/expected_outputs/paraviewer/HG002.paraphase.small/opn1lw/: chrX_154140048_154182441_bokeh.html
tests/data/inputs/: small_gencode.gtf.gz.tbi
tests/data/inputs/paraviewer/: HG002.paraphase.small.bam.bai  HG002_regions.bed  m84106_250429_131828_s4.paraphase.small.bam.bai  m84106_250429_131828_s4_regions.bed
tests/helpers/: plot_json_schema.py  synth_vcf_gtf.py
tests/integration/: test_cli_complex_sv_smoke.py  test_cli_multisample_labels.py  test_cli_plot_smoke.py  test_deploy_smoke.py
tests/scripts/: compare_files.py  manage_refs.sh  run_end_to_end_tests.sh
tests/unit/: test_bam_parser.py  test_cli_validation.py  test_cli_workflow_edge_cases.py  test_extract_variants.py  test_gtf_gff3_branch.py  test_gtf_parser.py  test_order_split_alignments.py  test_plot_filenames.py  test_plot_json_schema.py  test_utils.py  test_vcf_parser.py  test_vcf_parser_tabix.py
(+12 files in other folders)
